--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.3.0",
+    "@contentful/rich-text-react-renderer": "^15.19.0",
+    "@emailjs/browser": "^3.11.0",
+    "contentful": "^10.6.12",
+    "emailjs": "^4.0.3",
+    "framer-motion": "^10.16.5",
+    "html-react-parser": "^5.0.6",
+    "interweave": "^13.1.0",
+    "next": "14.0.2",
     "react": "^18",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-markdown": "^9.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "scroll-lock": "^2.1.5",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "eslint-config-next": "14.0.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
