--- a/process.env
+++ b/process.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SPACE_ID=651dpynyx4bt
 NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=aMDd0h_eopxu33mCbUFzzC2WcLg9JKX9ZbzswND_5gc
+SPACE_ID=651dpynyx4bt
+CONTENTFUL_ACCESS_TOKEN=aMDd0h_eopxu33mCbUFzzC2WcLg9JKX9ZbzswND_5g
